--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -496,7 +496,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#Experience"><span>Resumo profissional</span></a>
+          <a class="nav-link " href="/#experience"><span>Resumo profissional</span></a>
         </li>
 
         
