--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#Experience" data-target="#Experience"><span>Resumo profissional</span></a>
+          <a class="nav-link " href="/#experience" data-target="#experience"><span>Resumo profissional</span></a>
         </li>
 
         
