--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -542,7 +542,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#Experience"><span>Resumo profissional</span></a>
+          <a class="nav-link " href="/#experience"><span>Resumo profissional</span></a>
         </li>
 
         
