change about me

--- a/index.html
+++ b/index.html
@@ -795,7 +795,10 @@
     <h1>Sobre mim</h1>
 
     <div class="article-style">
-      <p>Sou Geógrafo com especialização em estatística espacial e mestrado em biodiversidade, trabalhei no Centro Nacional de Conservação da Flora (CNCFlora), Instituto Internacional para Sustentabilidade (IIS) e União Internacional para a Conservação da Natureza (UICN), atualmente trabalho para o &ldquo;Instituto Misionero de Biodiversidad (IMiBio, Argentina), com atividades relacionados à análise de dados espaciais, Sensoriamento Remoto e Planejamento Sistemático para a Conservação.</p>
+      <p>I am a Brazilian geographer looking foward to adress environmental challenges with geographical data science, taking the power of earth observation data, spatial statistics and software development.</p>
+<p>How did I get here?
+While working with the assessment of the brazilian&rsquo;s flora conservation status, I realized that, by that time, there was a lot to do and a few human resources. So, I decided to do a specialization in spatial statistics looking foward for tools that could help the assessment optimization. I ended with a statisticl approach to estimated the exposure of floras' species over fire, one of the most known proxy of environmental degradation.</p>
+<p>In my master project I have worked with spatial priorization to make conservation and mineral exploration compatible on an Environmental Reserve in the Amazon forest (link to brief summary?).</p>
 
     </div>
 
@@ -957,8 +960,8 @@
     
     <div class="featurette-icon"><i class="fas fa-database"></i></div>
     
-    <h3>PostgreSQL</h3>
-    <p>70%</p>
+    <h3>SQL</h3>
+    <p>50%</p>
   </div>
   
   
