--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -532,7 +532,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>Projects</span></a>
+          <a class="nav-link " href="/#projects"><span>Projetos</span></a>
         </li>
 
         
