--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -536,7 +536,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>Projects</span></a>
+          <a class="nav-link " href="/#projects"><span>Projetos</span></a>
         </li>
 
         
