--- a/pt/index.html
+++ b/pt/index.html
@@ -1856,7 +1856,7 @@ Responsabilidades:</p>
 
 
 
-<div class="project-card project-item isotope-item js-id-Autoconhecimento js-id-Autonomia">
+<div class="project-card project-item isotope-item js-id-Autoconhecimento js-id-Autonomia js-id-Pt-BR">
   <div class="card">
     
     
