--- a/project/restoration-priorization/index.html
+++ b/project/restoration-priorization/index.html
@@ -984,6 +984,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/post/netcdf/">Para quem só sabe usar martelo, todo problema é um prego. Até rasters em formato netCDF.</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
