--- a/pt/project/restoration-priorization/index.html
+++ b/pt/project/restoration-priorization/index.html
@@ -947,6 +947,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Relacionados</h3>
+    <ul>
+      
+      <li><a href="/pt/post/netcdf/">Para quem só sabe usar martelo, todo problema é um prego. Até rasters em formato netCDF.</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
