update post w/ pt-br

--- a/index.html
+++ b/index.html
@@ -2114,7 +2114,7 @@ Na primeira publicação onde exploro a possibilidade de implementar um sistema 
 
 
 
-<div class="project-card project-item isotope-item js-id-Django js-id-Python">
+<div class="project-card project-item isotope-item js-id-Django js-id-Python js-id-pt-br">
   <div class="card">
     
     
