--- a/pt/index.html
+++ b/pt/index.html
@@ -1954,7 +1954,8 @@ Responsabilidades:</p>
       <h4><a href="/pt/post/bug-buster/" >Bug buster</a></h4>
       
       <div class="article-style">
-        <p>Como tudo começou: Estou trabalhando num projeto onde uma das funções do python é executada e recebe um um parâmtero pelo terminal. Um detalhe é que esse parâmetro é o nome de uma pessoa.</p>
+        <p>Como tudo começou:  Nota do autor: artigo publiciado em 27/04/2022:
+ Estou trabalhando num projeto onde uma das funções do python é executada e recebe um um parâmtero pelo terminal.</p>
       </div>
       
     </div>
